django_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-django-deployment
  labels:
    app: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata: 
      labels:
        app: django-app
    spec:
      containers:
        - name: my-docker-container  # This is the name for the container within the pod
          image: my-django:v1  # This is the image name
          ports:
            - containerPort: 8000
