service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-django-ser
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: django-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
